--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>42mins</title>
   </head>
   <body>
-    <script src="./app.js"></script>
+    <div id="root"></div>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
